language/move-lang/tests/move_check/unit_test/test_filter_struct.exp
error[E03004]: unbound type
  ┌─ tests/move_check/unit_test/test_filter_struct.move:9:23
  │
9 │     public fun foo(): Foo {
  │                       ^^^ Unbound type 'Foo' in current scope

error[E03004]: unbound type
   ┌─ tests/move_check/unit_test/test_filter_struct.move:10:9
   │
10 │         Foo {}
   │         ^^^ Unbound type 'Foo' in current scope

